--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ disqusShortname = ""
   # Navigation Section
   [params.navigation]
     title = "Ted Laderas, PhD"
-    subtitle = "Data Scientist and Collaborator"
+    subtitle = "Data Scientist, Educator, and Collaborator"
     menu = "Menu"
     # Optional logo as brand stored in img/
     # logo = "logo.png"
@@ -92,13 +92,13 @@ disqusShortname = ""
     
     [[params.tiles.showcase]]
       title = "Project: Choropleths of Ready for R Class"
-      subtitle = "Understanding our email list by country domain"
+      subtitle = "Where are the Ready for R Students From?"
       image = "projects/choropleth.png"
       url = "projects/choropleth"
 
     [[params.tiles.showcase]]
       title = "Project: Animal Crossing Tidy Tuesday"
-      subtitle = "Understanding Character and Animal Types in Animal Crossing"
+      subtitle = "What personality/animal combos are unique?"
       image = "projects/ac.png"
       url = "projects/animal_crossing"
 
@@ -120,6 +120,11 @@ disqusShortname = ""
       image = "projects/r-bootcamp.jpg"
       url = "https://r-bootcamp.netlify.app"
 
+    [[params.tiles.showcase]]
+      title = "Workshop: A gRadual Introduction to Shiny"
+      subtitle = "A short workshop introducing basic shiny programming concepts"
+      #image = "projects/r-bootcamp.jpg"
+      url = "https://laderast.github.io/gradual_shiny/"
 
     # You can make more showcases by copy and pasting the code above
 
