adding tidyverse functions

--- a/config.toml
+++ b/config.toml
@@ -85,6 +85,11 @@ disqusShortname = ""
   [params.tiles]
     enable = true
     # Display your showcases here.
+    [[params.tiles.showcase]]
+      title = "Lesser Known Tidyverse Functions"
+      subtitle = "Parsing a twitter thread about tidyverse functions"
+      url = "projects/tidyverse_functions"
+
     
     [[params.tiles.showcase]]
       title = "Chopped Judges"
